test: check if the theme flicker issue is resolved

--- a/src/global/index.css
+++ b/src/global/index.css
@@ -15,6 +15,8 @@
 body {
   width: min(80rem, 100% - 2.5rem);
   margin-inline: auto;
+  background-color: var(--dark-background);
+  color: var(--dark-text-clr);
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
